--- a/.github/workflows/list-languages.yml
+++ b/.github/workflows/list-languages.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/github-script@v6
         with:
           script: |
-            console.log(github.rest.repos.listLanguages({
+            console.log(await github.rest.repos.listLanguages({
               owner: context.repo.owner,
               repo: context.repo.repo,
             }));
