--- a/.github/workflows/list-languages.yml
+++ b/.github/workflows/list-languages.yml
@@ -9,7 +9,11 @@ jobs:
       - uses: actions/github-script@v6
         with:
           script: |
-            console.log(await github.rest.repos.listLanguages({
+            const { status, data } = await github.rest.repos.listLanguages({
               owner: context.repo.owner,
               repo: context.repo.repo,
-            }));
+            })
+            console.log(
+              status,
+              data
+            );
