Check conditional exec

--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -25,7 +25,7 @@ jobs:
           git diff --quiet -- ${PYTHON_DEPENDENCIES} || 
             echo "BUILD_DEPENDENCIES_MODIFIED=1" >>${GITHUB_ENV}
       - name: Generate License File Name
-        if: ${{ env.BUILD_DEPENDENCIES_MODIFIED }}
+        if: ${{ env.BUILD_DEPENDENCIES_MODIFIED == 1}}
         run: |
           LICENSE_FILE=$(basename ${GITHUB_REPOSITORY})-pip-licenses.md
           echo "LICENSE_FILE=${LICENSE_FILE}" >>${GITHUB_ENV}
