--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -23,10 +23,7 @@ jobs:
           echo ${PYTHON_DEPENDENCIES}
           git diff --name-only --diff-filter=AM -- ${PYTHON_DEPENDENCIES}
           git diff --quiet -- ${PYTHON_DEPENDENCIES} || echo "BUILD_DEPENDENCIES_MODIFIED=true" >>${GITHUB_ENV}
-      - name: print value
-        uses: actions/github-script@v6
-        with:
-          script: console.log(env.BUILD_DEPENDENCIES_MODIFIED)
+      - run: echo ${{ env.BUILD_DEPENDENCIES_MODIFIED }}
       - name: Generate License File Name
         if: env.BUILD_DEPENDENCIES_MODIFIED
         run: |
