--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -21,10 +21,10 @@ jobs:
       - name: Check Dependencies Diff
         run: |
           BUILD_DEPENDENCIES_MODIFIED=false
-          git diff --cached --name-only --diff-filter=AM -- ${PYTHON_DEPENDENCIES}
-          git diff --cached --quiet -- ${PYTHON_DEPENDENCIES} || BUILD_DEPENDENCIES_MODIFIED=true
+          git diff --quiet --diff-filter=AM HEAD^ HEAD -- ${PYTHON_DEPENDENCIES} || BUILD_DEPENDENCIES_MODIFIED=true
           echo "BUILD_DEPENDENCIES_MODIFIED=$BUILD_DEPENDENCIES_MODIFIED" >>${GITHUB_ENV}
-      - run: echo ${{ env.BUILD_DEPENDENCIES_MODIFIED }}
+        - run: echo ${{ env.BUILD_DEPENDENCIES_MODIFIED }}
+        
       # - name: Generate License File Name
       #   if: env.BUILD_DEPENDENCIES_MODIFIED
       #   run: |
