--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      # ref: ${{ github.head_ref }}
+          ref: ${{ github.head_ref }}
 
       - name: Check Git Diff
         run: |
