GraphQL stringify JSON

--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -38,7 +38,7 @@ jobs:
               pull_number: context.payload.pull_request.number
             }
             const result = await github.graphql(query, variables)
-            console.log(result)
+            console.log(JSON.stringify(result))
 
         # with:
       #   retries: 3
