--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -48,7 +48,7 @@ jobs:
               name: context.repo.repo,
               pull_number: context.payload.pull_request.number,
               first: 1,
-              after: null
+              after: "0"
             }
             while (hasNextPage){
               const response = await github.graphql(query, {...variables, after})
