--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -42,18 +42,19 @@ jobs:
                 }
               }
             }`;
-            let hasNextPage = true
             let variables = {
               owner: context.repo.owner,
               name: context.repo.repo,
               pull_number: context.payload.pull_request.number,
               first: 1,
-              after: "0"
             }
+            let after = null
+            let hasNextPage = true
             while (hasNextPage){
               const response = await github.graphql(query, {...variables, after})
               const {repository: {pullRequest: {files: {nodes, pageInfo}}}} = response
-              hasNextPage = pageInfo.hasNextPage
+              { hasNextPage, endCursor}
+              {hasNextPage, endCursor: after} = pageInfo
               console.log(JSON.stringify(nodes, null, 2))
             }
 
