--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -18,7 +18,11 @@ jobs:
         with:
           fetch-depth: 0
           ref: ${{ github.head_ref }}
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
+          ref: ${{ github.base_ref }}
       - name: Pull Branches
         run: |
-          git pull --verbose
           git branch --verbose
