--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -17,14 +17,14 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-        # ref: ${{ github.head_ref }}
+          ref: ${{ github.head_ref }}
       - name: Do git stuff
         run: |
-          git branch --verbose | xargs -t
-          git pull --verbose | xargs -t
-          git checkout --verbose GITHUB_HEAD_REF | xargs -t
-          git checkout --verbose GITHUB_BASE_REF | xargs -t
+          git config --list
+          git branch --verbose
+          git pull --verbose
+          git checkout --verbose GITHUB_BASE_REF
 
-          result='no change' | xargs -t
-          git diff --exit-code --name-only GITHUB_HEAD_REF..$GITHUB_BASE_REF -- $PY_DEPS_FILE || result='change' | xargs -t
-          echo "$result" | xargs -t
+          result='no change'
+          git diff --exit-code --name-only GITHUB_HEAD_REF..$GITHUB_BASE_REF -- $PY_DEPS_FILE || result='change'
+          echo "$result"
