--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -5,6 +5,8 @@ defaults:
     shell: bash
 env:
   WATCH_FILE: requirements.txt
+  COMMIT_FILE: LICENSES.md
+  SCRIPT: .github/pip-licenses.sh
 on: pull_request
 jobs:
   generate_python_licenses_file:
@@ -17,18 +19,23 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          ref: ${{ github.head_ref }}
-      - name: Set WATCH_FILE_CHANGED_IN_PR
+          ref: ${{ github.base_ref }}
+      - name: Set WATCH_FILE_CHANGED_IN_PR Condition
         run: |
           git pull --verbose
-          git checkout "${GITHUB_BASE_REF}"
-
+          git checkout "${GITHUB_HEAD_REF}"
           git diff --exit-code --name-status "${GITHUB_HEAD_REF}..${GITHUB_BASE_REF}" -- "${WATCH_FILE}" ||
             WATCH_FILE_CHANGED_IN_PR=1
-
-          echo "WATCH_FILE_CHANGED_IN_PR=${WATCH_FILE_CHANGED_IN_PR:-0}" >>${GITHUB_ENV}
-
-      - run: |
-          printenv
-          ((WATCH_FILE_CHANGED_IN_PR)) && echo "yes"
-          ((WATCH_FILE_CHANGED_IN_PR)) || echo "no"
+          echo "WATCH_FILE_CHANGED_IN_PR=${WATCH_FILE_CHANGED_IN_PR:-0}" >>"${GITHUB_ENV}"
+      - name: Conditionally Run Script
+        if: env.WATCH_FILE_CHANGED_IN_PR
+        run: |
+          "${SCRIPT}" "${COMMIT_FILE}"
+      - name: Conditionally Commit and Push Output File
+        if: env.WATCH_FILE_CHANGED_IN_PR
+        run: |
+          git config user.name github-actions[bot]
+          git config user.email github-actions[bot]@users.noreply.github.com
+          git add --verbose "${COMMIT_FILE}"
+          git commit --verbose --message="Update license file"
+          git push --verbose origin "${GITHUB_HEAD_REF}"
