--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -5,8 +5,9 @@ defaults:
     shell: bash
 env:
   WATCH_FILE: requirements.txt
-  COMMIT_FILE: LICENSES.md
+  FILE_TO_COMMIT: LICENSES.md
   SCRIPT: .github/pip-licenses.sh
+  PY_BUILD_DEPS_FILE: requirements.txt
 on: pull_request
 jobs:
   generate_python_licenses_file:
@@ -20,22 +21,54 @@ jobs:
         with:
           fetch-depth: 0
           ref: ${{ github.base_ref }}
-      - name: Set WATCH_FILE_CHANGED_IN_PR Condition
+      - name: 'Set Condition: WATCH_FILE_CHANGED_IN_PR'
         run: |
           git pull --verbose
           git checkout "${GITHUB_HEAD_REF}"
           git diff --exit-code --name-status "${GITHUB_HEAD_REF}..${GITHUB_BASE_REF}" -- "${WATCH_FILE}" ||
             WATCH_FILE_CHANGED_IN_PR=1
           echo "WATCH_FILE_CHANGED_IN_PR=${WATCH_FILE_CHANGED_IN_PR:-0}" >>"${GITHUB_ENV}"
-      - name: Conditionally Run Script
+      - name: Conditionally Run License File Generator Script
         if: env.WATCH_FILE_CHANGED_IN_PR
+        # Create two environments to exclude pip-licenses dependencies from output
         run: |
-          "${SCRIPT}" "${COMMIT_FILE}"
+          environments=(
+            build-depencies-env
+            pip-licenses-env
+          )
+          echo "${environments[0]}" | tr [:lower:] [:upper:]
+          python3 -m venv "${environments[0]}"
+          source "${environments[0]}/bin/activate"
+          pip install -r "${PY_BUILD_DEPS_FILE}"
+          deactivate
+          echo "${environments[1]}" | tr [:lower:] [:upper:]
+          python3 -m venv "${environments[1]}"
+          source "${environments[1]}/bin/activate"
+          pip install pip-licenses
+          {
+            echo -e "# Software Licenses for Build Dependencies of the ${GITHUB_REPOSITORY} Repository\n"
+            echo -e "Generated with [`pip-licenses`](https://pypi.org/project/pip-licenses/)\n on $(date -u +%F)\n"
+            pip-licenses \
+              --python="./${environments[0]}/bin/python3" \
+              --from=mixed \
+              --order=license \
+              --format=markdown
+            echo -e "\n## Summary\n"
+            pip-licenses \
+              --python="./${environments[0]}/bin/python3" \
+              --from=mixed \
+              --order=license \
+              --format=markdown \
+              --summary
+          } >"${FILE_TO_COMMIT}"
+          deactivate
+          rm -fr "${environments[@]}"
+          cat "${FILE_TO_COMMIT}"
       - name: Conditionally Commit and Push Output File
         if: env.WATCH_FILE_CHANGED_IN_PR
         run: |
           git config user.name github-actions[bot]
           git config user.email github-actions[bot]@users.noreply.github.com
-          git add --verbose "${COMMIT_FILE}"
+          git add --verbose "${FILE_TO_COMMIT}"
           git commit --verbose --message="Update license file"
           git push --verbose origin "${GITHUB_HEAD_REF}"
