--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -32,11 +32,11 @@ jobs:
       - name: Dump GitHub context
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo '$GITHUB_CONTEXT'
+        run: echo $GITHUB_CONTEXT
       - name: Dump steps context
         env:
           STEPS_CONTEXT: ${{ toJson(steps) }}
-        run: echo '$STEPS_CONTEXT'
+        run: echo $STEPS_CONTEXT
       - name: Test if switch
         if: ${{ toJson(github.env.WATCH_FILE_CHANGED_IN_PR) }}
         run: echo 'success!'
